@@ -126,5 +126,7 @@ v1.4
 - Fixed false positive "Honor Note" matches SQL fragment "OR NOT"
 - Detect Coc Coc Browser
 - Improved commandline tool
+- Make order of the extracted fields stable (Set --> List)
+- Fail when asking for a field that cannot be extracted
 
 
